--- a/pipeline/logstash1.conf
+++ b/pipeline/logstash1.conf
@@ -1,11 +1,13 @@
 input {
   # Specify your input configuration here
-  stdin {}
+  stdin {
+    id => "trung-plugin-1"
+  }
 }
 
 output {
   # Specify your output configuration here
   file {
-    path => "/usr/share/logstash/workspace_logs/elk-output.log"
+    path => "/usr/share/logstash/workspace1_logs/elk-output.log"
   }
 }
