try mutate plugin

--- a/pipeline/logstash1.conf
+++ b/pipeline/logstash1.conf
@@ -1,13 +1,26 @@
+# Input stage
 input {
-  # Specify your input configuration here
   stdin {
-    id => "trung-plugin-1"
+    id => "trung-input-plugin-1"
   }
 }
 
+# Filter stage
+filter {
+  mutate { add_field => { "document" => "%{message}" } }
+  mutate { add_field => { "show" => "This data will be in the output" } }
+  mutate { add_field => { "[@metadata][greet]" => "Hello everyone" } }
+  mutate { add_field => { "[@metadata][role]" => "engineer" } }
+}
+
+# Output stage
 output {
-  # Specify your output configuration here
   file {
     path => "/usr/share/logstash/workspace1_logs/elk-output.log"
+  }
+  stdout {
+    id => "trung-output-plugin-1"
+    codec => rubydebug { metadata => true }
+    # codec => json
   }
 }
