--- a/pipeline/logstash2.conf
+++ b/pipeline/logstash2.conf
@@ -1,7 +1,7 @@
 input {
   # Specify your input configuration here
   stdin {
-    id => "trung-plugin-2"
+    id => "trung-input-plugin-2"
   }
 }
 
