play with confitional plugin

--- a/pipeline/logstash1.conf
+++ b/pipeline/logstash1.conf
@@ -11,6 +11,29 @@ filter {
   mutate { add_field => { "show" => "This data will be in the output" } }
   mutate { add_field => { "[@metadata][greet]" => "Hello everyone" } }
   mutate { add_field => { "[@metadata][role]" => "engineer" } }
+  
+  # Check if the input message is a numeric string
+  if [message] =~ /^\d+$/ {
+    # Convert the input message to an integer as "statusCode"
+    mutate {
+      rename => { "message" => "statusCode" }
+      convert => { "statusCode" => "integer" }
+    }
+
+    # Add the "status" field based on the "statusCode"
+    if [statusCode] == 200 {
+      mutate {
+        add_field => { "status" => "OK" }
+      }
+    } else {
+      mutate {
+        add_field => { "status" => "Something wrong..." }
+      }
+    }
+  } else {
+    # If the input message is not a numeric string, ignore it (drop the process)
+    drop {}
+  }
 }
 
 # Output stage
