--- a/pipeline/mutate.conf
+++ b/pipeline/mutate.conf
@@ -1,7 +1,7 @@
 # Input stage
 input {
   stdin {
-    id => "trung-input-plugin-1"
+    id => "mutate-input-plugin"
   }
 }
 
@@ -39,10 +39,10 @@ filter {
 # Output stage
 output {
   file {
-    path => "/usr/share/logstash/workspace1_logs/elk-output.log"
+    path => "/usr/share/logstash/workspace_logs/elk-output.log"
   }
   stdout {
-    id => "trung-output-plugin-1"
+    id => "mutate-output-plugin"
     codec => rubydebug { metadata => true }
     # codec => json
   }
