--- a/pipeline/csv_file.conf
+++ b/pipeline/csv_file.conf
@@ -1,3 +1,33 @@
-# input {
+input {
+  file {
+    path => "/usr/share/logstash/workspace_data/users.csv"
+    start_position => "beginning"
+  }
+}
 
-# }
+filter {
+	csv {
+		autodetect_column_names => true
+	}
+	mutate {
+		convert => {
+			"Age" => "integer"
+			"Salary" => "float"
+		}
+		rename => {
+			"FName" => "FirstName"
+			"LName" => "LastName"
+		}
+		strip => ["FirstName", "LastName"]
+		uppercase => ["Gender"]
+		gsub => [
+			"EmailId", "gmail", "yahoo"
+		]
+	}
+}
+
+output {
+	stdout {
+		codec => rubydebug
+	}
+}
