--- a/logstash/config/logstash.yml
+++ b/logstash/config/logstash.yml
@@ -5,5 +5,5 @@ http.host: '0.0.0.0'
 # pipeline.workers: 1
 
 # Select default main pipeline. If not specify, it will process events log in round-robin fashion
-pipeline.id: 'demo_grok'
-path.config: '/usr/share/logstash/pipeline/demo_grok.conf'
+pipeline.id: 'beat'
+path.config: '/usr/share/logstash/pipeline/beat.conf'
