--- a/logstash/config/pipelines.yml
+++ b/logstash/config/pipelines.yml
@@ -8,3 +8,5 @@
   path.config: '/usr/share/logstash/pipeline/csv_file.conf'
 - pipeline.id: demo_grok
   path.config: '/usr/share/logstash/pipeline/demo_grok.conf'
+- pipeline.id: beat
+  path.config: '/usr/share/logstash/pipeline/beat.conf'
