--- a/filebeat/filebeat.yml
+++ b/filebeat/filebeat.yml
@@ -1,7 +1,12 @@
 filebeat.inputs:
   - type: log
     paths:
-      - /usr/share/filebeat/workspace_data/http.log
+      - /usr/share/filebeat/workspace_data/stacktrace.log
+    multiline:
+      type: pattern
+      pattern: "^\\s"
+      negate: false
+      match: after
 
 output.logstash:
   hosts: ['172.17.0.2:5044']
